--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
     <!-- **************************************** -->
     <!-- Project Dependencies                     -->
     <!-- **************************************** -->
-    <!-- eXo deps -->
     <org.exoplatform.portal.version>3.4.0.Final</org.exoplatform.portal.version>
     <org.exoplatform.calendar.version>4.0.0.Alpha1-kill-exobuild-SNAPSHOT</org.exoplatform.calendar.version>
     <org.exoplatform.wiki.version>4.0.0.Alpha1-kill-exobuild-SNAPSHOT</org.exoplatform.wiki.version>
@@ -49,54 +48,34 @@
     <org.exoplatform.jcr.version>1.14.9-GA-SNAPSHOT</org.exoplatform.jcr.version>
     <org.exoplatform.core.version>2.4.9-GA-SNAPSHOT</org.exoplatform.core.version>
     <org.gatein.shindig.version>2.0.2-CP01</org.gatein.shindig.version>
-    <!-- 3rd parties deps -->
-    <org.slf4j.version>1.5.8</org.slf4j.version>
-    <org.shindig.version>2.0.2-CP01</org.shindig.version>
-    <org.json.version>20070829</org.json.version>
-    <javax.jcr.version>1.0</javax.jcr.version>
-    <commons-lang.version>2.6</commons-lang.version>
-    <javax.servlet.version>2.5</javax.servlet.version>
-    <javax.portlet.version>2.0</javax.portlet.version>
-    <org.xwiki.rendering.version>4.1.3</org.xwiki.rendering.version>
   </properties>
-  <!-- ALL VERSIONS OF DEPENDENCIES HAVE TO BE DEFINED HERE -->
   <dependencyManagement>
     <dependencies>
+      <!-- Import versions of external dependencies to use -->
       <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>${commons-lang.version}</version>
+        <groupId>org.exoplatform</groupId>
+        <artifactId>maven-depmgt-pom</artifactId>
+        <version>1-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
+      <!-- Import versions from commons project -->
       <dependency>
-        <groupId>javax.jcr</groupId>
-        <artifactId>jcr</artifactId>
-        <version>${javax.jcr.version}</version>
+        <groupId>org.exoplatform.commons</groupId>
+        <artifactId>commons</artifactId>
+        <version>${org.exoplatform.commons.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>javax.portlet</groupId>
-        <artifactId>portlet-api</artifactId>
-        <version>${javax.portlet.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>${javax.servlet.version}</version>
-      </dependency>
+      <!-- Import versions from calendar project -->
       <dependency>
         <groupId>org.exoplatform.calendar</groupId>
-        <artifactId>calendar-service</artifactId>
+        <artifactId>calendar</artifactId>
         <version>${org.exoplatform.calendar.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>org.exoplatform.commons</groupId>
-        <artifactId>commons-webui-component</artifactId>
-        <version>${org.exoplatform.commons.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.exoplatform.commons</groupId>
-        <artifactId>commons-webui-ext</artifactId>
-        <version>${org.exoplatform.commons.version}</version>
-      </dependency>
+      <!-- To be replaced by an import of core parent POM -->
       <dependency>
         <groupId>org.exoplatform.core</groupId>
         <artifactId>exo.core.component.organization.api</artifactId>
@@ -107,6 +86,7 @@
         <artifactId>exo.core.component.security.core</artifactId>
         <version>${org.exoplatform.core.version}</version>
       </dependency>
+      <!-- To be replaced by an import of ecms parent POM -->
       <dependency>
         <groupId>org.exoplatform.ecms</groupId>
         <artifactId>ecms-core-services</artifactId>
@@ -117,36 +97,21 @@
         <artifactId>ecms-core-webui</artifactId>
         <version>${org.exoplatform.ecms.version}</version>
       </dependency>
+      <!-- Import versions from forum project -->
       <dependency>
         <groupId>org.exoplatform.forum</groupId>
-        <artifactId>forum-answer-service</artifactId>
+        <artifactId>forum</artifactId>
         <version>${org.exoplatform.forum.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>org.exoplatform.forum</groupId>
-        <artifactId>forum-application-common</artifactId>
-        <version>${org.exoplatform.forum.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.exoplatform.forum</groupId>
-        <artifactId>forum-component-bbcode</artifactId>
-        <version>${org.exoplatform.forum.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.exoplatform.forum</groupId>
-        <artifactId>forum-component-common</artifactId>
-        <version>${org.exoplatform.forum.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.exoplatform.forum</groupId>
-        <artifactId>forum-forum-service</artifactId>
-        <version>${org.exoplatform.forum.version}</version>
-      </dependency>
+      <!-- Our own project modules -->
       <dependency>
         <groupId>org.exoplatform.integration</groupId>
         <artifactId>integ-social-ecms</artifactId>
         <version>${project.version}</version>
       </dependency>
+      <!-- To be replaced by an import of jcr parent POM -->
       <dependency>
         <groupId>org.exoplatform.jcr</groupId>
         <artifactId>exo.jcr.component.core</artifactId>
@@ -157,6 +122,7 @@
         <artifactId>exo.jcr.component.ext</artifactId>
         <version>${org.exoplatform.jcr.version}</version>
       </dependency>
+      <!-- To be replaced by an import of kernel parent POM -->
       <dependency>
         <groupId>org.exoplatform.kernel</groupId>
         <artifactId>exo.kernel.commons</artifactId>
@@ -172,6 +138,7 @@
         <artifactId>exo.kernel.container</artifactId>
         <version>${org.exoplatform.kernel.version}</version>
       </dependency>
+      <!-- To be replaced by an import of GateIn Portal parent POM -->
       <dependency>
         <groupId>org.exoplatform.portal</groupId>
         <artifactId>exo.portal.component.common</artifactId>
@@ -217,6 +184,7 @@
         <artifactId>exo.portal.webui.portlet</artifactId>
         <version>${org.exoplatform.portal.version}</version>
       </dependency>
+      <!-- To be replaced by an import of social parent POM -->
       <dependency>
         <groupId>org.exoplatform.social</groupId>
         <artifactId>social-component-common</artifactId>
@@ -232,30 +200,19 @@
         <artifactId>social-component-webui</artifactId>
         <version>${org.exoplatform.social.version}</version>
       </dependency>
+      <!-- Import versions from wiki project -->
       <dependency>
         <groupId>org.exoplatform.wiki</groupId>
-        <artifactId>wiki-renderer</artifactId>
+        <artifactId>wiki</artifactId>
         <version>${org.exoplatform.wiki.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
       </dependency>
-      <dependency>
-        <groupId>org.exoplatform.wiki</groupId>
-        <artifactId>wiki-service</artifactId>
-        <version>${org.exoplatform.wiki.version}</version>
-      </dependency>
+      <!-- To be replaced by an import of GateIn Shinding parent POM -->
       <dependency>
         <groupId>org.gatein.shindig</groupId>
         <artifactId>shindig-social-api</artifactId>
         <version>${org.gatein.shindig.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.json</groupId>
-        <artifactId>json</artifactId>
-        <version>${org.json.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.xwiki.rendering</groupId>
-        <artifactId>xwiki-rendering-api</artifactId>
-        <version>${org.xwiki.rendering.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
